--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ILKOOM Tech - We Build Technology</title>
+    <link rel="icon" href="/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./fontawesome/css/all.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav id="main-navbar" class="navbar navbar-expand-md navbar-light bg-light fixed-top py-2 py-md-0">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">ILKOOM</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a href="#showcase" class="nav-link p-3">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#product" class="nav-link p-3">Product</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#team" class="nav-link p-3">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#blog" class="nav-link p-3">Blog</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <script src="./js/popper.js"></script>
     <script src="./js/jquery-3.5.1.js"></script>
