Menambah Showcase di index.html dan style.css

--- a/index.html
+++ b/index.html
@@ -37,6 +37,23 @@
             </div>
         </div>
     </nav>
+    <!-- Akhir Navbar -->
+
+
+    <!-- SHOWCASE -->
+    <section id="showcase" class="py-5">
+        <div class="dark-overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center text-white">
+                        <h1 class="display-3">We Build <strong>Technology</strong></h1>
+                        <p class="lead">Lorem ipsum dolor sit amet constectur adipiscing elit. Dignissimos, vitae!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir SHOWCASE -->
 
     <script src="./js/popper.js"></script>
     <script src="./js/jquery-3.5.1.js"></script>
