--- a/index.html
+++ b/index.html
@@ -55,6 +55,58 @@
     </section>
     <!-- Akhir SHOWCASE -->
 
+
+    <!-- SHOWOFF 1 -->
+    <section id="showoff-1" class="bg-ligt text-muted py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/image1.jpg" class="img-fluid mb-3">
+                </div>
+                <div class="col-md-6">
+                    <h2>Kreatif</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Aperiam cumque, esse modi maxime veniam nulla delectus dolorem 
+                        inventore temporibus tempora!
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur 
+                        vitae, velit fugiat magni neque consectetur incidunt perspiciatis cum 
+                        et sapiente eaque doloremque sequi. Vero et blanditiis velit dolor.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati 
+                        ab nemo velit rem vel est dolor suscipit delectus nulla. Laboriosam 
+                        ducimus est iusto maiores qui eaque nam quod perferendis reiciendis.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir SHOWFF 1 -->
+
+    <!-- SHOWOFF 2 -->
+    <section id="showoff-2" class="text-muted py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Inovatif</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Nesciunt, exercitationem. Perspiciatis quia numquam dolor tenetur 
+                        natus dicta eligendi non nisi!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Ex quasi quisquam delectus consectetur esse quod sed, 
+                        aliquam nemo, impedit ipsum vel, blanditiis deserunt deleniti praesentium 
+                        doloribus cum voluptatibus unde dicta.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Ex quasi quisquam delectus consectetur esse quod sed, 
+                        aliquam nemo, impedit ipsum vel, blanditiis deserunt deleniti praesentium 
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/image2.jpg" class="img-fluid mb-3">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir SHOWOFF 2 -->
+
     <script src="./js/popper.js"></script>
     <script src="./js/jquery-3.5.1.js"></script>
     <script src="./js/bootstrap.js"></script>
