--- a/index.html
+++ b/index.html
@@ -107,6 +107,49 @@
     </section>
     <!-- Akhir SHOWOFF 2 -->
 
+
+    <!-- Product -->
+    <section id="product" class="py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <h1>Product and Services</h1>
+                    <hr class="w-25">
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, suscipit.</p>
+                </div>
+            </div>
+
+            <div class="row text-center justify-content-between mt-3">
+                <div class="col-sm-6 col-md-3 p-3">
+                    <i class="fas fa-globe fa-4x"></i>
+                    <h4 class="mt-3">Website</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Dolor corporis ex illum beatae ullam.</p>
+                </div>
+                <div class="col-sm-6 col-md-3 p-3">
+                    <i class="fas fa-code fa-4x"></i>
+                    <h4 class="mt-3">Aplikasi</h4>
+                    <p clas="">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Sed similique exercitationem corporis, in est at autem aliquid!</p>
+                </div>
+                <div class="col-sm-6 col-md-3 p-3">
+                    <i class="fas fa-pencil-ruler fa-4x"></i>
+                    <h4 class="mt-3">Design Grafis</h4>
+                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quos ullam corrupti alias molestiae!</p>
+                </div>
+                <div class="col-sm-6 col-md-3 p-3">
+                    <i class="fas fa-shield-alt fa-4x"></i>
+                    <h4 class="mt-3">Keamanan Sistem</h4>
+                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At architecto repellat quam quibusdam.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir Product -->
+
+
+    
+
     <script src="./js/popper.js"></script>
     <script src="./js/jquery-3.5.1.js"></script>
     <script src="./js/bootstrap.js"></script>
