Menambah Explore di index.html

--- a/index.html
+++ b/index.html
@@ -148,6 +148,23 @@
     <!-- Akhir Product -->
 
 
+    <!-- EXPLORE -->
+    <section id="explore" class="bg-dark text-white py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <h1 class="display-4">Explore</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Perferendis quaerat in mollitia adipisci minima suscipit repellat 
+                        ex consequuntur consequatur tempore.</p>
+                        <a href="#" class="btn btn-outline-light">Find More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir Explore -->
+
+
     
 
     <script src="./js/popper.js"></script>
