Menambah Section Newsletter di index.html

--- a/index.html
+++ b/index.html
@@ -276,6 +276,29 @@
             </div>
         </div>
     </section>
+    <!-- Akhir TEAM -->
+
+
+    <!-- NEWSLETTER -->
+    <section id="newsletter" class="text-center p-5 bg-dark text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>Join Our Newsletter</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Expedita eius illo sapiente tenetur, esse aperiam eligendi 
+                        magnam suscipit sequi minus!</p>
+                    <form class="form-inline justify-content-center">
+                        <label for="name" class="sr-only">Nama</label>
+                        <input type="text" id="name" class="form-control mt-2 mt-sm-0 mr-sm-2" placeholder="Nama Lengkap">
+                        <label for="email" class="sr-only">Email</label>
+                        <input type="email" id="email" class="form-control mt-2 mt-sm-0 mr-sm-2" placeholder="Alamat Email">
+                        <button class="btn btn-secondary mt-2 mt-md-0" type="submit">Daftar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="./js/popper.js"></script>
     <script src="./js/jquery-3.5.1.js"></script>
