Menambahkan Section Blog di index.html

--- a/index.html
+++ b/index.html
@@ -299,6 +299,61 @@
             </div>
         </div>
     </section>
+    <!-- Akhir NEWSLETTER -->
+
+
+    <!-- BLOG -->
+    <section id="blog" class="py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <h1>Blog Update</h1>
+                    <hr class="w-25">
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Asperiores sunt maxime laborum eveniet eum ipsum.</p>
+                </div>
+            </div>
+
+            <div class="card-columns">
+
+                <div class="card">
+                    <img class="card-img-top" src="img/blog1.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Desain Web Inspiratif 2020</h5>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Nam et doloremque facere, aperiam sequi saepe?</p>
+                        <p class="card-text">
+                            <small class="text-muted">Last update 3 days ago</small>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img class="card-img-top" src="img/blog2.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Sejarah Perkembangan Web Desain</h5>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Nam et doloremque facere, aperiam sequi saepe?</p>
+                        <p class="card-text">
+                            <small class="text-muted">Last updated 1 months ago</small>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img class="card-img-top" src="img/blog1.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">Cara Membuat Web Sendiri</h5>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Nam et doloremque facere, aperiam sequi saepe?</p>
+                        <p class="card-text">
+                            <small class="text-muted">Last updated 2 months ago</small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="./js/popper.js"></script>
     <script src="./js/jquery-3.5.1.js"></script>
