Menambah Section Footer di index.html

--- a/index.html
+++ b/index.html
@@ -354,7 +354,49 @@
             </div>
         </div>
     </section>
+    <!-- AKhir BLOG -->
 
+
+    <!-- Footer -->
+    <section id="footer" class="bg-dark text-white text-center py-5">
+        <div class="container">
+            <div class="row">
+                <div class="text-md-left col-md-4 mr-auto">
+                    <h5>ILKOOM</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Obcaecati nobis eaque repellendus adipisci odio! Blanditiis ea nam voluptas. Quos, nihil!</p>
+                    <small>&copy; ILKOOM 2020</small>
+                </div>
+                <div class="text-md-left col-md-4 mt-4 mt-md-0">
+                    <h5>Hubungi Kami</h5>
+                    <div><i class="fas fa-envelope fa-fw mr-3"></i>mhernanda66@gmail.com</div>
+                    <div><i class="fas fa-phone fa-fw mr-3"></i>(0254) 123456</div>
+                    <div><i class="fas fa-globe fa-fw mr-3"></i>www.ilkoom.com</div>
+                    <div class="pt-3">
+                        <a href="#" class="text-white mr-2">
+                            <i class="fab fa-facebook fa-lg"></i>
+                        </a>
+                        <a href="#" class="text-white mr-2">
+                            <i class="fab fa-twitter fa-lg"></i>
+                        </a>
+                        <a href="#" class="text-white mr-2">
+                            <i class="fab fa-instagram fa-lg"></i>
+                        </a>
+                        <a href="#" class="text-white mr-2">
+                            <i class="fab fa-google-plus fa-lg"></i>
+                        </a>
+                        <a href="#" class="text-white mr-2">
+                            <i class="fab fa-github fa-lg"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir Footer -->
+
+
+    
     <script src="./js/popper.js"></script>
     <script src="./js/jquery-3.5.1.js"></script>
     <script src="./js/bootstrap.js"></script>
