--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./fontawesome/css/all.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/aos.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -57,7 +58,7 @@
 
 
     <!-- SHOWOFF 1 -->
-    <section id="showoff-1" class="bg-light text-muted py-5">
+    <section id="showoff-1" class="bg-light text-muted py-5" data-aos="fade-left">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -82,7 +83,7 @@
     <!-- Akhir SHOWFF 1 -->
 
     <!-- SHOWOFF 2 -->
-    <section id="showoff-2" class="text-muted py-5">
+    <section id="showoff-2" class="text-muted py-5" data-aos="fade-right">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -109,7 +110,7 @@
 
 
     <!-- Product -->
-    <section id="product" class="py-5 bg-light">
+    <section id="product" class="py-5 bg-light" data-aos="fade-up">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
@@ -149,7 +150,7 @@
 
 
     <!-- EXPLORE -->
-    <section id="explore" class="bg-dark text-white py-5">
+    <section id="explore" class="bg-dark text-white py-5" data-aos="fade-up">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
@@ -166,7 +167,7 @@
 
 
     <!-- TEAM -->
-    <section id="team" class="py-5 text-center">
+    <section id="team" class="py-5 text-center" data-aos="fade-up">
         <div class="container">
             <div class="row mb-5">
                 <div class="col">
@@ -280,7 +281,7 @@
 
 
     <!-- NEWSLETTER -->
-    <section id="newsletter" class="text-center p-5 bg-dark text-white">
+    <section id="newsletter" class="text-center p-5 bg-dark text-white" data-aos="fade-up">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -303,7 +304,7 @@
 
 
     <!-- BLOG -->
-    <section id="blog" class="py-5 bg-light">
+    <section id="blog" class="py-5 bg-light" data-aos="fade-up">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
@@ -400,5 +401,12 @@
     <script src="./js/popper.js"></script>
     <script src="./js/jquery-3.5.1.js"></script>
     <script src="./js/bootstrap.js"></script>
+    <script src="./js/aos.js"></script>
+    <script>
+        AOS.init({
+            once:true,
+            duration:800,
+        })
+    </script>
 </body>
 </html>
